feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment -> code fixes and Unit Test (#47465)
* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment

* feat: [CDS-54465]: Reuse or create a new Perpetual Task for new Deployment